Provide core structural changes
- add TypeScript support
- move source and generated files into their respective folders
- change the app module name to MediumReaderApp
- regenerate both native code folders

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "mediumReaderReact",
-  "displayName": "mediumReaderReact"
+  "name": "MediumReaderApp",
+  "displayName": "MediumReaderApp"
 }
