Update TS configuration
- changed module resolution to using Node.js’ conventions
- dropped the strict type checking for JS modules, where the type cannot be inferred. i believe, this should be more of a warning or hint than an actual error. See more info here:
— https://angular.io/docs/ts/latest/guide/typescript-configuration.html#!#-noimplicitany-and-suppressimplicitanyindexerrors-

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "build",
     "rootDir": "src",
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "noImplicitAny": false,
     "experimentalDecorators": true,
     "preserveConstEnums": true,
     "allowJs": true,
