--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/react": "^15.0.18",
     "@types/react-native": "^0.42.9",
     "react": "15.4.2",
-    "react-native": "0.42.3"
+    "react-native": "0.42.3",
+    "react-native-material-design": "^0.3.7"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
