--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
+    "react-addons-test-utils": "15.4.2",
     "react-test-renderer": "15.4.2",
     "whatwg-fetch": "^2.0.3"
   },
   "jest": {
     "automock": false,
-    "testRegex": "./build/__tests__/.*.js$",
-    "rootDir": ".",
-    "preset": "react-native"
+    "testRegex": "./__tests__/.*.js$",
+    "roots": ["./build/", "./node_modules/"],
+    "preset": "react-native",
+    "unmockedModulePathPatterns": [
+      "react",
+      "react-native"
+    ]
   }
 }
