--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,7 @@
   "include": [
     "typings/index.d.ts",
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/__tests__/**/*.js",
-    "src/__mocks__/**/*.*"
+    "src/**/*.tsx"
   ],
   "exclude": [
     "index.android.js",
