--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "(/src/__tests__/.*|\\.(test|spec))\\.ts$",
+    "testRegex": "(/src/__tests__/.*|\\.(test|spec))\\.(ts|tsx)$",
     "preset": "react-native",
     "unmockedModulePathPatterns": [
       "react",
