--- a/package.json
+++ b/package.json
@@ -15,16 +15,32 @@
     "react-native-material-design": "^0.3.7"
   },
   "devDependencies": {
-    "babel-jest": "19.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "jest": "19.0.2",
+    "@types/jest": "^19.2.3",
+    "babel-jest": "^19.0.0",
+    "babel-preset-react-native": "^1.9.1",
+    "jest": "20.0.0",
+    "react-addons-test-utils": "15.4.2",
     "react-test-renderer": "15.4.2",
+    "ts-jest": "^20.0.1",
+    "typescript": "^2.3.2",
     "whatwg-fetch": "^2.0.3"
   },
   "jest": {
     "automock": false,
-    "testRegex": "./build/__tests__/.*.js$",
-    "rootDir": ".",
-    "preset": "react-native"
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/src/__tests__/.*|\\.(test|spec))\\.(ts|tsx)$",
+    "preset": "react-native",
+    "unmockedModulePathPatterns": [
+      "react",
+      "react-native"
+    ]
   }
 }
